corrected media service impl